syntax = "proto3";

package payment;

service PaymentService {
  rpc GetPlans (Empty) returns (PlansResponse);
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc VerifyPayment (VerifyPaymentRequest) returns (VerifyPaymentResponse);
  rpc GetSubscription (GetSubscriptionRequest) returns (SubscriptionResponse);
}

message Empty {}

message PlanMessage {
  string id = 1;
  string key = 2;
  string name = 3;
  string description = 4;
  int32 priceMonthly = 5;
  int32 priceAnnual = 6;
  repeated string features = 7;
  bool isPopular = 8;
}

message PlansResponse {
  repeated PlanMessage plans = 1;
}

message CreateOrderRequest {
  string userId = 1;
  string planId = 2;
  string billingCycle = 3;
}

message OrderResponse {
  string orderId = 1;
  int32 amount = 2;
  string currency = 3;
  string razorpayKeyId = 4;
}

message VerifyPaymentRequest {
  string orderId = 1;
  string paymentId = 2;
  string signature = 3;
  string userId = 4;
}

message VerifyPaymentResponse {
  bool success = 1;
  string message = 2;
}

message GetSubscriptionRequest {
  string userId = 1;
}

message SubscriptionResponse {
  string planKey = 1;
  string planName = 2;
  string status = 3;
  string expiresAt = 4;
}
