syntax = "proto3";

package payment;

option go_package = "./payment";

// Payment Service - handles subscriptions, payments, and billing
service PaymentService {
  // Get available subscription plans
  rpc GetPlans(GetPlansRequest) returns (GetPlansResponse);
  
  // Get user's current subscription
  rpc GetSubscription(GetSubscriptionRequest) returns (SubscriptionResponse);
  
  // Create checkout session for subscription
  rpc CreateCheckoutSession(CreateCheckoutRequest) returns (CreateCheckoutResponse);
  
  // Cancel subscription
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse);
  
  // Resume cancelled subscription
  rpc ResumeSubscription(ResumeSubscriptionRequest) returns (SubscriptionResponse);
  
  // Change subscription plan
  rpc ChangePlan(ChangePlanRequest) returns (SubscriptionResponse);
  
  // Get billing history
  rpc GetBillingHistory(GetBillingHistoryRequest) returns (GetBillingHistoryResponse);
  
  // Get invoice details
  rpc GetInvoice(GetInvoiceRequest) returns (InvoiceResponse);
  
  // Handle Stripe webhook events
  rpc HandleStripeWebhook(WebhookRequest) returns (WebhookResponse);
  
  // Handle Razorpay webhook events
  rpc HandleRazorpayWebhook(WebhookRequest) returns (WebhookResponse);
  
  // Create customer portal session
  rpc CreatePortalSession(CreatePortalSessionRequest) returns (CreatePortalSessionResponse);
}

// Request/Response Messages

message GetPlansRequest {
  optional string currency = 1;  // USD, INR, etc.
}

message GetPlansResponse {
  bool success = 1;
  string message = 2;
  repeated Plan plans = 3;
}

message Plan {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price_cents = 4;
  string currency = 5;
  string interval = 6;  // "month" or "year"
  repeated string features = 7;
  int32 max_mailboxes = 8;
  int32 max_emails_per_mailbox = 9;
  int32 mailbox_ttl_hours = 10;
  bool custom_domain = 11;
  bool email_forwarding = 12;
}

message GetSubscriptionRequest {
  string user_id = 1;
}

message SubscriptionResponse {
  bool success = 1;
  string message = 2;
  Subscription subscription = 3;
}

message Subscription {
  string id = 1;
  string user_id = 2;
  string plan_id = 3;
  string plan_name = 4;
  string status = 5;  // "active", "cancelled", "past_due", "trialing"
  string current_period_start = 6;
  string current_period_end = 7;
  bool cancel_at_period_end = 8;
  string payment_provider = 9;  // "stripe" or "razorpay"
  string created_at = 10;
}

message CreateCheckoutRequest {
  string user_id = 1;
  string plan_id = 2;
  string success_url = 3;
  string cancel_url = 4;
  string payment_provider = 5;  // "stripe" or "razorpay"
}

message CreateCheckoutResponse {
  bool success = 1;
  string message = 2;
  string checkout_url = 3;
  string session_id = 4;
}

message CancelSubscriptionRequest {
  string user_id = 1;
  bool immediate = 2;  // Cancel immediately or at period end
}

message CancelSubscriptionResponse {
  bool success = 1;
  string message = 2;
  string cancelled_at = 3;
}

message ResumeSubscriptionRequest {
  string user_id = 1;
}

message ChangePlanRequest {
  string user_id = 1;
  string new_plan_id = 2;
  bool prorate = 3;
}

message GetBillingHistoryRequest {
  string user_id = 1;
  optional int32 limit = 2;
  optional int32 offset = 3;
}

message GetBillingHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated InvoiceSummary invoices = 3;
  int32 total = 4;
}

message InvoiceSummary {
  string id = 1;
  string invoice_number = 2;
  int32 amount_cents = 3;
  string currency = 4;
  string status = 5;  // "paid", "open", "void"
  string created_at = 6;
  string paid_at = 7;
}

message GetInvoiceRequest {
  string invoice_id = 1;
  string user_id = 2;
}

message InvoiceResponse {
  bool success = 1;
  string message = 2;
  Invoice invoice = 3;
}

message Invoice {
  string id = 1;
  string invoice_number = 2;
  string user_id = 3;
  int32 amount_cents = 4;
  string currency = 5;
  string status = 6;
  string description = 7;
  string pdf_url = 8;
  string hosted_invoice_url = 9;
  string created_at = 10;
  string paid_at = 11;
}

message WebhookRequest {
  string payload = 1;
  string signature = 2;
}

message WebhookResponse {
  bool success = 1;
  string message = 2;
}

message CreatePortalSessionRequest {
  string user_id = 1;
  string return_url = 2;
}

message CreatePortalSessionResponse {
  bool success = 1;
  string message = 2;
  string portal_url = 3;
}
